--- a/0_tools/0_github_liberator.Rmd
+++ b/0_tools/0_github_liberator.Rmd
@@ -20,9 +20,9 @@ output:
     
     - Consider saving your PW in the browser. You cannot change your passwords at this moment.
     
-1. Click top right Home button > Open project > DSCI445 > DSCI445.Rproj
+1. Click top right Home button > Open project > STAT400 > STAT400.Rproj
 
-1. Click notes/notes.Rproj to open the notes project
+1. Click homeworks/homeworks.Rproj to open the homeworks project
 
 1. Setup liberator to work with GitHub
 
@@ -50,7 +50,23 @@ output:
 
     - Navigate to https://liberator.stat.colostate.edu
     
-    - Open "notes" project
+    - Open "homeworks" project
     
     - Top right click "Git" tab > "Pull"
+    
+1. Share your homeworks project with the instructor and grader.
+
+    a. Click the drop down on the project (top right side) > Share Project...
+    
+        ```{r, echo=FALSE, out.width="25%"}
+        knitr::include_graphics("../images/share_project.png")
+        ```
+      
+    a. Click the drop down and add "stat400instructors" to your project.
+    
+        ```{r, echo=FALSE, out.width="25%"}
+        knitr::include_graphics("../images/share_dropdown.png")
+        ```
+
+    This is how you **receive points** for reproducibility on your homework!
 
